# RingleaderNIC

./: LICENSE.txt  README.md  build_driver.sh  build_fpga.sh
demikernel/: README.md
demikernel/catnip/: .gitignore  Cargo.toml  Makefile  README.md
demikernel/catnip/src/: engine.rs  fail.rs  file_table.rs  futures_utility.rs  interop.rs  lib.rs  libos.rs  logging.rs  operations.rs  options.rs  runtime.rs  scheduler.rs  test_helpers.rs  timer.rs
demikernel/catnip/src/collections/: async_map.rs  async_slab.rs  bytes.rs  waker_page.rs  watched.rs
demikernel/catnip/src/collections/hashttlcache/: mod.rs  tests.rs
demikernel/catnip/src/protocols/: mod.rs
demikernel/catnip/src/protocols/arp/: mod.rs  options.rs  peer.rs  tests.rs
demikernel/catnip/src/protocols/arp/cache/: mod.rs  tests.rs
demikernel/catnip/src/protocols/arp/msg/: mod.rs
demikernel/catnip/src/protocols/arp/pdu/: mod.rs
demikernel/catnip/src/protocols/ethernet2/: frame.rs
demikernel/catnip/src/protocols/icmpv4/: datagram.rs  peer.rs
demikernel/catnip/src/protocols/ip/: port.rs
demikernel/catnip/src/protocols/ipv4/: datagram.rs  mod.rs  peer.rs  tests.rs
demikernel/catnip/src/protocols/tcp/: active_open.rs  constants.rs  isn_generator.rs  mod.rs  operations.rs  options.rs  passive_open.rs  peer.rs  segment.rs
demikernel/catnip/src/protocols/tcp/established/: mod.rs
demikernel/catnip/src/protocols/tcp/established/background/: acknowledger.rs  closer.rs  mod.rs  retransmitter.rs  sender.rs
demikernel/catnip/src/protocols/tcp/established/state/: mod.rs  receiver.rs  rto.rs  sender.rs
demikernel/catnip/src/protocols/tcp/established/state/congestion_ctrl/: cubic.rs  mod.rs  none.rs  options.rs
demikernel/catnip/src/protocols/tcp/tests/: established.rs  mod.rs  setup.rs
demikernel/catnip/src/protocols/udp/: listener.rs  mod.rs  operations.rs  options.rs  peer.rs  socket.rs  tests.rs
demikernel/catnip/src/protocols/udp/datagram/: header.rs  mod.rs
demikernel/catnip/src/sync/: mod.rs  threadsafe.rs  threadunsafe.rs
demikernel/catnip/tests/: tcp.rs  udp.rs
demikernel/catnip/tests/common/: libos.rs  mod.rs  runtime.rs
demikernel/demikernel/: Makefile  README.md  default.yaml
demikernel/demikernel/src/catnip-libos/: Cargo.toml
demikernel/demikernel/src/catnip-libos/examples/: ixy.rs
demikernel/demikernel/src/catnip-libos/src/: db.rs  dpdk.rs  lib.rs  memory.rs  runtime.rs
demikernel/ixy-rs/: .gitignore  Cargo.toml  README.md  build.rs  inlined.c  wrapper.h
demikernel/ixy-rs/src/: bindings.rs  lib.rs
demikernel/perftools/: .gitignore  Cargo.toml  LICENSE  README.md
demikernel/perftools/examples/: timer.rs
demikernel/perftools/src/profiler/: mod.rs  tests.rs
driver/: .gitignore  CMakeLists.txt  README.md
driver/src/: memory.c  memory.h  msg.c  msg.h
driver/src/app/: ixy-throughput.c  ixy_testmmio.c
driver/src/driver/: device.c  device.h  mqnic.c  mqnic.h  mqnic_type.h
hardware/: README.md
hardware/fpga/common/rtl/: cpl_queue_manager.v  cpl_write.v  desc_fetch.v  mqnic_core_pcie.v  mqnic_interface.v  mqnic_port.v  queue_manager.v  rx_engine.v
hardware/fpga/common/rtl/ringleader/: define.v  desc_dispatch.v  desc_gen.v  desc_sche.v  desc_sche_pifo.v  find_min.v  head_parser.v  perf_monitor.v  pifo.sv  pifo_queue_manager.v  pifo_warp.v  rand_mem_alloc.v  ringleader.v  rl_memory_alloc.v  testbench.v
hardware/fpga/common/tb/: mqnic.py
hardware/fpga/mqnic/ADM_PCIE_9V3/fpga_100g/fpga/: Makefile  config.tcl
hardware/fpga/mqnic/ADM_PCIE_9V3/fpga_100g/rtl/: fpga_core.v
hardware/fpga/mqnic/ADM_PCIE_9V3/fpga_100g/tb/fpga_core/: Makefile  test_fpga_core.py  wave.gtkw
hardware/fpga/mqnic/AU280/fpga_100g/fpga/: Makefile  config.tcl
hardware/fpga/mqnic/AU280/fpga_100g/ip/: ila_0.tcl
hardware/fpga/mqnic/AU280/fpga_100g/tb/fpga_core/: Makefile  signal.gtkw  test_fpga_core.py
hardware/fpga/mqnic/fb2CG/fpga_10g/tb/fpga_core/: test_fpga_core.py
hardware/modules/mqnic/: mqnic_dev.c  mqnic_eq.c  mqnic_hw.h  mqnic_ioctl.h  mqnic_main.c  mqnic_netdev.c  mqnic_port.c
hardware/modules/mqnic/user/: Makefile  test_user  test_user.c
