[package]
name = "catnip"
version = "0.7.0"
authors = [ "Microsoft Corporation" ]
description = "Fast User-Space TCP/UDP Stack"
homepage = "https://aka.ms/demikernel"
repository = "https://github.com/demikernel/catnip"
readme = "README.md"
license-file = "LICENSE.txt"
edition = "2018"

[dependencies]
arrayvec = "0.7.1"
bit-array = "0.4.4"
typenum = "1.15.0"
bit-iter = "0.1.3"
byteorder = "1.4.3"
bytes = "1.0.1"
crc = "1.8.1"
crossbeam-channel = "0.5.1"
custom_error = "1.9.2"
derive_more = "0.99.14"
either = "1.6.1"
eui48 = "1.1.0"
flexi_logger = { version = "0.18.0", features = ["colors"] }
float_duration = "0.3.3"
futures = "0.3.15"
futures-intrusive = { git = "https://github.com/sujayakar/futures-intrusive", rev = "13b113fdc67594bd09912d78acc8f8212127537d" }
histogram = "0.6.9"
libc = "0.2.97"
log = "0.4.14"
# mimalloc = { version = "0.1.19", default-features = false }
must-let = { git = "https://github.com/sujayakar/must-let" }
nix = "0.21.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
pin-project = "1.0.7"
rand = { version = "0.8.4", features = ["small_rng"] }
slab = "0.4.3"
unicycle = { git = "https://github.com/sujayakar/unicycle", rev = "44c0e8f62cb9355cfd35ef5309abf10a4c388b62" }
uniset = "0.2.0"
async-trait = "0.1.50"
perftools = { path = "../perftools" }
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.3.4"

[features]
threadunsafe = []
profiler = []

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false
