[package]
name = "catnip-libos"
version = "0.2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
arrayvec = "0.7.1"
anyhow = "1.0.32"
catnip = {path = "../../../catnip"}
clap = "2.33.3"
ixy-rs = { path = "../../../ixy-rs"}
futures = "0.3.15"
libc = "0.2.97"
rand = { version = "0.8.4", features = ["small_rng"] }
yaml-rust = "0.4.4"
histogram = "0.6.9"
byteorder = "1.2.7"
must-let = { git = "https://github.com/sujayakar/must-let" }
log = "0.4.14"
ntest = "0.7.3"
perftools = { path = "/home/jxlin/perftools" }
core_affinity = "0.5.10"

[dependencies.rocksdb]
default-features = false
features = ["lz4"]

[build-dependencies]
bindgen = "0.55.1"

[features]
profiler = [ "catnip/profiler" ]
